Correct code block spacing + force p with white space

--- a/content/assets/stylesheets/documentation.scss
+++ b/content/assets/stylesheets/documentation.scss
@@ -1,4 +1,5 @@
 $doc-body-font: Lucida Sans Unicode, sans-serif;
+$linenums-margins: 0 5px 5px 30px;
 
 #documentation {
   font-family: $doc-body-font;
@@ -44,6 +45,9 @@ $doc-body-font: Lucida Sans Unicode, sans-serif;
     + ul, ol {
       margin-top: 0;
     }
+    + pre[lang] {
+      margin-top: -5px;
+    }
   }
 
   ul, ol {
@@ -53,6 +57,9 @@ $doc-body-font: Lucida Sans Unicode, sans-serif;
   div[lang] {
     ul, ol {
       margin: 0 20px 20px 20px;
+      &.linenums {
+        margin: $linenums-margins;
+      }
     }
   }
 
@@ -313,7 +320,7 @@ $doc-body-font: Lucida Sans Unicode, sans-serif;
     border: 1px solid #999;
     border-radius: 5px;
     background-color: #EEE;
-    padding: 5px 10px;
+    padding: 5px 5px 0 10px;
     font-family: monospace, serif;
     font-size: 11px;
   }
@@ -422,7 +429,7 @@ $doc-body-font: Lucida Sans Unicode, sans-serif;
   }
 
   ol.linenums {
-    margin: 5px 5px 5px 30px;
+    margin: $linenums-margins;
     li {
       font-size: 10px;
     }
